Update and rename ChowZ.DA5020.Practicum1.Rmd to pharma-sales-forecast.Rmd

--- a/pharma-sales-forecast.Rmd
+++ b/pharma-sales-forecast.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Analytics & Visualization"
+title: "Pharma Sales Analytics and Forecast"
 author: "Zoe Chow"
 date: "Spring 2025"
 output:
